# Circle

./: README.md  main.py  pyproject.toml
circle/: main.py
circle/commands/contact/: __init__.py  add.py  delete.py
circle/commands/daemon/: __init__.py  start.py  status.py  stop.py
circle/config/: __init__.py  config.py
circle/core/: contact.py  logger.py
circle/core/config/: config.py
circle/core/daemon/: __init__.py  daemon.py  manager.py
circle/core/logger/: __init__.py
circle/core/notification/: __init__.py  base.py  manager.py  registry.py
circle/core/notification/channels/: desktop.py  telegram.py
circle/core/notification/exceptions/: __init__.py
circle/core/reminder/: reminder.py
circle/models/: contact.py  reminder_model.py
src/cli/: __init__.py
src/cli/contact/: __init__.py  show.py  update.py
src/cli/daemon/: __init__.py  start.py  status.py  stop.py
src/core/: notification.py  scheduler.py
src/core/deamon/: runner.py
src/db/: db.json  history.json  reminder.json
